# PicoPlayOpus

./: .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  README.md  freertos_hook.c  main.c  msc_disk.c  ogg_stripper.c  ogg_stripper.h  openocd.cfg  settings.h  tusb_config.h  usb_descriptors.c  wav_data.h
ogg-data/: ogg_data.h
